--- a/style.css
+++ b/style.css
@@ -2,19 +2,26 @@ body {
     margin: 0px;
 }
 
-.greek {
-    background-color: purple;
-    padding-top: 40px;
-    padding-bottom: 40px;
+.container {
+    height: 100vh;
 }
+
 
 h2 {
     font-family: 'GFS Neohellenic', sans-serif;
     font-weight: 700;
-    font-size: 96px;
-    padding: 16px;
     display: inline;
     color: white;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.65);
+    font-size: 96px;
+    font-size: 25vw;
+}
+
+h3 {
+    margin-top: 0px;
+    color: white;
+    font-size: 48px;
+    font-size: 3vw;
 }
 
 .description p {
@@ -25,6 +32,11 @@ h2 {
 
 .center {
     text-align: center;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .hidden {
