--- a/style.css
+++ b/style.css
@@ -12,21 +12,66 @@ h2 {
     font-weight: 700;
     display: inline;
     color: white;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.65);
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.65);
     font-size: 96px;
     font-size: 25vw;
 }
 
 h3 {
-    margin-top: 0px;
     color: white;
+    font-family: 'Lato', sans-serif;
+    margin-top: 0px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.65);
     font-size: 48px;
     font-size: 3vw;
 }
 
+@media screen and (max-width: 925px) {
+    h2 {
+        font-size: 40vw;
+    }
+    h3 {
+        font-size: 5vw;
+    }
+}
+
+
+button {
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    display: inline-block;
+    height: 36px;
+    padding: 0 26px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 36px;
+    vertical-align: middle;
+    white-space: nowrap;
+    font-size: 14px;
+    letter-spacing: .03em;
+    position: relative;
+    overflow: hidden;
+}
+
+#reRoll{
+    color: #FFF;
+    background-color: #f55a4e;
+    margin-right: 12px;
+}
+
+#share {
+    color: #FFF;
+    background-color: #2196F3;
+    margin-left: 12px;
+}
+
 .description p {
     color: white;
-    font-family: Sans-serif;
+    font-family: 'Lato', sans-serif;
     opacity: .6;
 }
 
