--- a/style.css
+++ b/style.css
@@ -68,6 +68,15 @@ button {
     letter-spacing: .03em;
     position: relative;
     overflow: hidden;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+  box-shadow: inset 0 0 0 2px #fff;
+}
+
+button:focus {
+    outline: none;
 }
 
 #reRoll {
