--- a/style.css
+++ b/style.css
@@ -7,17 +7,16 @@ body {
 }
 
 .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */    
     height: 100%;
     width: 100%;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    position: fixed; 
+    z-index: 1; 
     left: 0;
     top: 0;
-    background-color: rgb(255,255,255); /* Black fallback color */
-    background-color: rgba(255,255,255, 0.97); /* Black w/opacity */
-    overflow-x: hidden; /* Disable horizontal scroll */
-    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    background-color: rgb(255,255,255);
+    background-color: rgba(255,255,255, 0.97); 
+    overflow-x: hidden;
+    transition: 0.5s; 
 }
 
 h2 {
@@ -37,6 +36,22 @@ h3 {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.65);
     font-size: 48px;
     font-size: 3vw;
+}
+
+.overlay {
+    font-family: 'Lato', sans-serif;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+h4 {
+    font-size: 20px;
+}
+
+#close-info {
+    margin: 24px;
 }
 
 @media screen and (max-width: 925px) {
